--- a/index.css
+++ b/index.css
@@ -22,23 +22,26 @@ header{
     /*background: linear-gradient(to bottom, rgba(226, 109, 0, 1), rgba(226, 165, 20, 0.9)), black;*/
 }
 #menu #laptop-img{
-    height: 300px;
+    max-height: 300px;
+    height: 20vw;
     position: absolute;
     bottom: -50px;
     left:50%;
     transform: translateX(-50%);
 }
 #screen-shade{
-    height: 300px;
+    max-height: 300px;
+    height: 20vw;
     position: absolute;
     bottom: -50px;
     left:50%;
     transform: translateX(-50%);
 }
 #temp1{
-    width: 270px;
+    max-height: 300px;
+    height: 20vw;
     position: absolute;
-    bottom: 70px;
+    bottom: -50px;
     left:50%;
     transform: translateX(-50%);
 }
