--- a/index.css
+++ b/index.css
@@ -133,14 +133,16 @@ header{
     text-align: center;
     margin: 2em 0;
 }
+#course-view{
+    text-align: -webkit-center;
+}
 #course-view ul{
-    display: grid ;
-    grid-template-columns: repeat(5, 1fr);
+    display: grid;
+    grid-gap: 2em;
+    grid-template-columns: repeat(3, 1fr);
     list-style: none;
     padding: 0;
-}
-#course-view ul li:nth-child(1){
-    grid-column: 2/3;
+    width: fit-content;
 }
 #course-view img{
     height: 200px;
