--- a/index.css
+++ b/index.css
@@ -80,12 +80,13 @@ header{
     background: rgba(0,0,0,0.3);
 }
 #learning{
-    text-align: center;
-    margin: 3em 0;
+    text-align: -webkit-center;
+    /*margin: 3em 0;*/
+    margin: 2em 0;
 }
 #learning h1{
     font-size: 30px;
-    margin: 2em 0;
+    /*margin: 2em 0;*/
 }
 #learning-grid ul{
     display: grid ;
@@ -93,9 +94,9 @@ header{
     width: fit-content;
     grid-template-columns: repeat(3, 1fr);
     list-style: none;
-    margin: 2em auto;
+    /*margin: 2em auto;*/
     padding: 0;
-    place-self: center;
+    /*place-self: center;*/
 }
 /*#learning-grid ul li:nth-child(1){
     grid-column: 2/3;
