fixing padding and margin issues of learning and courses

--- a/index.css
+++ b/index.css
@@ -88,6 +88,9 @@ header{
     font-size: 30px;
     /*margin: 2em 0;*/
 }
+#learning h3{
+    margin: 0;
+}
 #learning-grid ul{
     display: grid ;
     grid-gap: 2em;
