--- a/media.css
+++ b/media.css
@@ -3,3 +3,20 @@
         margin: 2em 0;
     }
 }
+@media (min-width: 500px){
+    #slider{
+        height: 50vw;
+    }
+    #picture-text {
+        grid-template-columns: auto;
+        grid-template-rows: repeat(2, auto);
+    }
+    #picture-text img{
+        place-self: center center;
+    }
+    #text-2{
+        width: 80vw;
+        place-self: center center;
+        text-align: justify;
+    }
+}
