--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@ body{
     background-color: #f3f3f3;
 }
 header{
-    background: linear-gradient( to top, rgba(0,0,0,0.8), rgba(0,0,0,0.5)), url("images/slider-bg.jpeg") center no-repeat;
+    background: linear-gradient( to top, rgba(0,0,0,0.0), rgba(0,0,0,0.0)), url("images/minimalist-top-bg.jpg") center no-repeat;
     /*background: linear-gradient( to top, rgba(0,0,0,0.8), rgba(0,0,0,1)), white center no-repeat;*/
     /*background-color: #4c4c4c;*/
     background-size: cover;
@@ -18,7 +18,7 @@ header{
 #navbar{
     height: fit-content;
     align-self: end;
-    background-color: #292929;
+    background: linear-gradient( to top, rgba(0,0,0,0.9), rgba(0,0,0,0.4));
     /*background: linear-gradient(to bottom, rgba(226, 109, 0, 1), rgba(226, 165, 20, 0.9)), black;*/
 }
 #menu #laptop-img{
@@ -68,8 +68,10 @@ header{
     align-items: center;
     height: 30vw;
     /*background: linear-gradient(to bottom, #e2aa00, #e26d05);*/
-    background: linear-gradient(to bottom, rgba(255,127,0,0.5), rgba(0,0,0,0)), url("images/doodle-stock.jpeg"), center no-repeat;
+    /*background: linear-gradient(to bottom, rgba(255,127,0,0.5), rgba(0,0,0,0)), url("images/doodle-stock.jpeg"), center no-repeat;*/
+    background: url("images/doodle-stock.jpeg") center no-repeat;
     background-size: cover;
+
 }
 #text-1{
     font-family: gotham-medium;
@@ -80,6 +82,8 @@ header{
     background: rgba(0,0,0,0.3);
 }
 #learning{
+    /*background: url("images/bookcase.jpg") center no-repeat;*/
+    /*background-size: cover ;*/
     text-align: -webkit-center;
     /*margin: 3em 0;*/
     margin: 2em 0;
@@ -111,12 +115,14 @@ header{
 }
 #learning-grid img{
     max-height: 300px;
+    max-width: 300px;
+
     height: 25vw;
-    width: auto;
+    width: 25vw;
     border-radius: 20px;
     -webkit-box-shadow: 6px 6px 29px -13px rgba(0,0,0,0.45);
     -moz-box-shadow: 6px 6px 29px -13px rgba(0,0,0,0.45);
-    box-shadow: 6px 6px 29px -13px rgba(0,0,0,0.2);
+    box-shadow: 6px 6px 29px -13px rgba(0,0,0,0.3);
 }
 #picture-text{
     display: grid;
@@ -153,7 +159,7 @@ header{
     width: auto;
 }
 #get-started, #see-more{
-    background: linear-gradient( to bottom, #e2bb39, #e29430);
+    background: linear-gradient( to bottom, #1c1c1c, #383838);
     border: 0 solid transparent;
     border-radius: 20px;
     padding: 1em 3em;
