--- a/index.css
+++ b/index.css
@@ -8,12 +8,13 @@ body{
     background-color: #f3f3f3;
 }
 header{
+    display: none;
     background: linear-gradient( to top, rgba(0,0,0,0.0), rgba(0,0,0,0.0)), url("images/minimalist-top-bg.jpg") center no-repeat;
     /*background: linear-gradient( to top, rgba(0,0,0,0.8), rgba(0,0,0,1)), white center no-repeat;*/
     /*background-color: #4c4c4c;*/
     background-size: cover;
     height: 20vw;
-    display: grid;
+    /*display: grid;*/
 }
 #navbar{
     height: fit-content;
