--- a/mobile-index.css
+++ b/mobile-index.css
@@ -17,6 +17,12 @@ html, body{
     padding: 0 2em;
     margin: 0;
 }
+#logo-li{
+    display: flex;
+}
+#logo-li a{
+    place-self: center;
+}
 #logo{
     height: 100px;
     width: auto;
@@ -77,7 +83,7 @@ html, body{
 }
 #menu-options a{
     text-decoration: none;
-    color: black;
+    color: #222222;
     font-size: 50px;
     font-family: gotham-medium;
 }
