slider menu fixed position

--- a/mobile-index.css
+++ b/mobile-index.css
@@ -62,7 +62,7 @@ html, body{
 #menu-options{
     display: grid;
     grid-template-rows: repeat(4, 1fr) ;
-    position: absolute;
+    position: fixed;
     top: 0%;
     left: -100%;
     width: 100vw;
