--- a/media.css
+++ b/media.css
@@ -1,4 +1,23 @@
+@media (min-width: 1000px){
+    #learning h1, #courses h1{
+        margin: 2em 0;
+    }
+}
+@media (min-width: 501px) {
+    header{
+        display: grid;
+    }
+    #mobile-navbar{
+        display: none;
+    }
+}
 @media (max-device-width: 500px){
+    header{
+        display: none;
+    }
+    #mobile-navbar{
+        display: block;
+    }
     #slider{
         height: 70vw;
         padding-top: 8vh;
@@ -27,10 +46,5 @@
         width: 80vw;
         place-self: center center;
         text-align: justify;
-    }
-}
-@media (min-width: 1000px){
-    #learning h1, #courses h1{
-        margin: 2em 0;
     }
 }
