mobile version meta tag adjustment

--- a/index.css
+++ b/index.css
@@ -9,8 +9,6 @@ body{
 }
 header{
     background: linear-gradient( to top, rgba(0,0,0,0.0), rgba(0,0,0,0.0)), url("images/minimalist-top-bg.jpg") center no-repeat;
-    /*background: linear-gradient( to top, rgba(0,0,0,0.8), rgba(0,0,0,1)), white center no-repeat;*/
-    /*background-color: #4c4c4c;*/
     background-size: cover;
     height: 20vw;
     display: grid;
@@ -66,7 +64,7 @@ header{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30vw;
+    padding: 140px 0 120px ;
     /*background: linear-gradient(to bottom, #e2aa00, #e26d05);*/
     /*background: linear-gradient(to bottom, rgba(255,127,0,0.5), rgba(0,0,0,0)), url("images/doodle-stock.jpeg"), center no-repeat;*/
     background: url("images/doodle-stock.jpeg") center no-repeat;
@@ -76,10 +74,15 @@ header{
 #text-1{
     font-family: gotham-medium;
     text-align: center;
-    padding: 1em 5em;
+    padding: 40px 0 60px 0;
     font-size: 25px;
+    width: 100%;
     color: white;
-    background: rgba(0,0,0,0.3);
+    background: rgba(0,0,0,0.4);
+}
+#text-1 h2{
+    max-width: 1330px;
+    margin: auto;
 }
 #learning{
     /*background: url("images/bookcase.jpg") center no-repeat;*/
@@ -124,20 +127,28 @@ header{
     -moz-box-shadow: 6px 6px 29px -13px rgba(0,0,0,0.45);
     box-shadow: 6px 6px 29px -13px rgba(0,0,0,0.3);
 }
+#picture-text-cont{
+    width: 100%;
+    background-color: white;
+}
 #picture-text{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    background-color: white;
+    /*background-color: white;*/
+    width: 100%;
+    max-width: 1330px;
+    margin: auto;
+    text-align: center;
     /*place-items: center left;*/
 }
 #picture-text img{
     place-self: center right;
-    height: 500px;
+    width: 100%;
 }
 #text-2{
-    width: 30vw;
+    width: 80%;
     font-size: 20px;
-    place-self: center left;
+    place-self: center;
 }
 #courses{
     text-align: center;
@@ -148,14 +159,20 @@ header{
 }
 #course-view ul{
     display: grid;
-    grid-gap: 2em;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(3, auto);
     list-style: none;
     padding: 0;
-    width: fit-content;
+    width: 100%;
+    max-width: 700px;
+    place-content: space-between;
+}
+#course-view li{
+    max-height: 200px;
+    max-width: 200px;
+
 }
 #course-view img{
-    height: 200px;
+    max-height: 200px;
     width: auto;
 }
 #get-started, #see-more{
@@ -166,7 +183,6 @@ header{
     /*margin: 2em;*/
     font-size: 16px;
     color: white;
-
 }
 footer{
     background-color: #1a1a1a;
@@ -192,6 +208,7 @@ footer p{
 #footer-content p{
     text-align: right;
 }
+
 .boldit{
     font-family: gotham-medium;
     white-space: nowrap;
