--- a/media.css
+++ b/media.css
@@ -3,49 +3,21 @@
         margin: 2em 0;
     }
 }
-@media (min-width: 501px) {
-    header{
-        display: grid;
-    }
-    #mobile-navbar{
-        display: none;
+@media (max-width: 768px){
+    #picture-text{
+        grid-template-columns: repeat(1, auto);
     }
 }
-@media (max-device-width: 500px){
-    header{
-        display: none;
+@media (max-width: 600px){
+    #course-view{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
-    #mobile-navbar{
-        display: block;
-    }
-    #slider{
-        height: 70vw;
-        padding-top: 8vh;
-    }
-    #slider h2{
-        font-size: 3rem;
-    }
-    #learning, #courses{
-        margin: 2em 0 0 0;
-    }
-    #get-started, #see-more{
-        width: 100vw;
-        height: 80px;
-        font-size: 2em;
-        border-radius: unset;
-        padding: unset;
-    }
-    #picture-text {
-        grid-template-columns: auto;
-        grid-template-rows: repeat(2, auto);
-    }
-    #picture-text img{
-        place-self: center center;
-    }
-    #text-2{
-        width: 80vw;
-        place-self: center center;
-        text-align: justify;
+    #course-view ul{
+        grid-template-columns: repeat(1, auto);
+        place-content: unset;
     }
     #parent{
         display: grid;
@@ -67,5 +39,32 @@
     #footer-content p{
         text-align: center;
         font-size: 14px;
+    }
+}
+@media (min-width: 501px) {
+    header{
+        display: grid;
+    }
+    #mobile-navbar{
+        display: none;
+    }
+}
+@media (max-device-width: 500px){
+    header{
+        display: none;
+    }
+    #mobile-navbar{
+        display: block;
+    }
+    #slider{
+        margin-top: 70px;
+        padding: 80px 0 60px;
+    }
+    #get-started, #see-more{
+        width: 100vw;
+        height: 80px;
+        font-size: 2em;
+        border-radius: unset;
+        padding: unset;
     }
 }
