--- a/index.css
+++ b/index.css
@@ -98,6 +98,11 @@ header{
 #learning h3{
     margin: 0;
 }
+#learning-grid{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 #learning-grid ul{
     display: grid ;
     grid-gap: 2em;
@@ -156,6 +161,9 @@ header{
 }
 #course-view{
     text-align: -webkit-center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #course-view ul{
     display: grid;
@@ -183,6 +191,8 @@ header{
     /*margin: 2em;*/
     font-size: 16px;
     color: white;
+    text-decoration: none;
+    /*margin: 1em 0;*/
 }
 footer{
     background-color: #1a1a1a;
