--- a/media.css
+++ b/media.css
@@ -1,6 +1,6 @@
 @media (min-width: 1000px){
     #learning h1, #courses h1{
-        margin: 2em 0;
+        margin: 2em 0 1em 0;
     }
 }
 @media (max-width: 768px){
@@ -66,6 +66,9 @@
         font-size: 2em;
         border-radius: unset;
         padding: unset;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     #learning, #courses{
         margin-bottom: 0;
