added gap in course index grid

--- a/media.css
+++ b/media.css
@@ -40,6 +40,7 @@
     }
     #course-view ul{
         grid-template-columns: repeat(1, auto);
+        grid-row-gap: 1em;
         place-content: unset;
     }
     #parent{
